<resources>
    <string name="app_name">Safe_Com</string>
    <string name="button_main">Send</string>
    <string name="activity2_name">Safe_Com\\Person#2</string>
    <string name="text_header">Message Received:</string>
    <string name="editText_main">Enter Your Message Here</string>
    <string name="button_second">Reply</string>
    <string name="editText_second">Enter Your Reply Here</string>
    <string name="text_header_reply">Reply Received:</string>
    <string name="text_permanent_hint"><![CDATA[>]]></string>
</resources>
