...
        android:text="@string/text_header"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorFont"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_header"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:fontFamily="@font/cour"
...
